//
// (C) 2010-2012 ICM UW. All rights reserved.
//

//  @since 2012-08-07

option java_package = "pl.edu.icm.coansys.importers.models";
option java_outer_classname = "DocumentProtos";

message KeyValue{
	required string key = 1;
	required string value = 2;
	optional string comment = 3;
}

message TextWithLanguage{
	required string text = 1;
	optional string language = 2;
	optional string comment = 3;
}

message ClassifCode{
	required string source = 1;
	repeated string value = 2;
}

message Affiliation{
	required string key = 1;
	required string affiliationId = 2;
	required string text = 3;
}

message Author{
	required string key = 1;
   	optional string forenames = 2;
   	optional string surname = 3;
   	optional string name = 4;
   	optional string email = 5;
	repeated KeyValue affiliationRef = 6;
   	optional string docId = 7;
   	optional int32  positionNumber = 8;
   	repeated KeyValue extId = 9;
        repeated KeyValue auxiliarInfo = 10;
}

message BasicMetadata{
   	repeated TextWithLanguage title = 1;
   	repeated Author author = 2;
   	optional string doi = 3;
   	optional string journal = 4;
   	optional string isbn = 5;
   	optional string issn = 6;
	optional string year = 7;
   	optional string issue = 8;
	optional string volume = 9;
   	optional string pages = 10;
   	repeated ClassifCode classifCode = 11;
}

message DocumentMetadata{
	required string key = 1;
	required BasicMetadata basicMetadata = 2;
	repeated TextWithLanguage documentAbstract = 3;
   	repeated TextWithLanguage keyword = 4;
   	repeated KeyValue extId = 5;
	repeated KeyValue auxiliarInfo = 6;
   	repeated ReferenceMetadata reference = 7;
   	optional string collection = 8;
        optional string sourcePath = 9;
}

message ReferenceMetadata{
	required string key = 1;
	required BasicMetadata basicMetadata = 2;
	optional string sourceDocKey = 3;
	optional int32 position = 4;
	optional string rawCitationText = 5;
}

message Media {
	required string key = 1;
	required string mediaType = 2;
	required bytes content = 3;
   	optional string collection = 4;
        optional string sourcePath = 5;
        optional int64 sourceFilesize = 6;
        optional string destinationPath = 7;
}

message MediaContainer {
	repeated Media media = 1;
}

message DocumentWrapper{
	required string rowId = 1;
	optional DocumentMetadata documentMetadata = 2;
	optional MediaContainer mediaContainer = 3;
}
